--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MagicStack</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <title>Magic Stack!</title>
     <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
-
-    <%= stylesheet_link_tag "application" %>
-    <%= javascript_pack_tag "application" %>
+    <%= javascript_pack_tag 'app' %>
+    <%= stylesheet_pack_tag 'app' %>
   </head>
 
   <body>
